fix stretching for tall images

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -183,7 +183,6 @@ li > p:nth-child(1)
 
 img, video
   max-width: 100%
-  width: 40ch
   max-height: 90vh
 
 main img, main video
